@@ -9550,6 +9550,8 @@ $\kbd{l} = \kbd{lg(x)}$, in place.
 \fun{long}{ZXX_max_lg}{GEN x} returns the effective length of the longest
 component in $x$; assume all coefficients are \typ{INT} or \kbd{ZX}s.
 
+\fun{GEN}{ZXX_evalx0}{GEN P} returns $P(X, 0)$.
+
 \fun{GEN}{ZXX_Z_mul}{GEN x, GEN y} returns $x\*y$.
 
 \fun{GEN}{ZXX_Z_add_shallow}{GEN x, GEN y} returns $x+y$. Shallow function.
