@@ -1172,19 +1172,6 @@ _can5_sqr(void *E, GEN A)
 }
 
 static GEN
-ZXX_evalx0(GEN y)
-{
-  long i, l = lg(y);
-  GEN z = cgetg(l,t_POL); z[1] = y[1];
-  for(i=2; i<l; i++)
-  {
-    GEN yi = gel(y,i);
-    gel(z,i) = typ(yi)==t_INT? yi: constant_coeff(yi);
-  }
-  return ZX_renormalize(z,l);
-}
-
-static GEN
 _can5_iter(void *E, GEN f, GEN q)
 {
   pari_sp av = avma;
